--- a/IBM_Python_Test_19_06_2020.ipynb
+++ b/IBM_Python_Test_19_06_2020.ipynb
@@ -9,16 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Enter a String to check Palindrom :\n",
-      " is palindromme\n"
-     ]
+     "name": "stdout",
+     "text": "Hello is not palindromme\n"
     }
    ],
    "source": [
@@ -31,8 +30,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### 2.Remove Duplicate"
    ]
@@ -313,9 +314,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.4 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1594277105183"
   },
   "language_info": {
    "codemirror_mode": {
@@ -327,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.4-candidate"
   }
  },
  "nbformat": 4,
