Categorical Plots with seaborn

--- a/Intro To Py.ipynb
+++ b/Intro To Py.ipynb
@@ -55353,9 +55353,12 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "[(1, 2., b'Albert Einstein') (2, 2., b'Edmond Halley')\n (3, 3., b'Gertrude B. Elion')]\n"
+     "output_type": "stream",
+     "text": [
+      "[(1, 2., b'Albert Einstein') (2, 2., b'Edmond Halley')\n",
+      " (3, 3., b'Gertrude B. Elion')]\n"
+     ]
     }
    ],
    "source": [
@@ -55434,6 +55437,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.8.3 (default, May 19 2020, 06:50:17) [MSC v.1916 64 bit (AMD64)]'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.version"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -55442,9 +55466,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.6 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python_defaultSpec_1594277186831"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -55456,7 +55480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
